fixed render issue with tags on firefox

--- a/trunk/Molecule.WebSite/atomes/photo/style/common.css
+++ b/trunk/Molecule.WebSite/atomes/photo/style/common.css
@@ -4,12 +4,10 @@
 	width:82px;
 	position:relative;
 	vertical-align:top;
-	display:inline;
 }
 
 .PhotoLink img
 {
-	float: left;
 	border:solid 1px;
 }
 
